[Minor] Changed LogSeverity of ComponentContainerImpl start/stop to system